  were dead and googling for them gave no useful information. The missing
  features have been rewritten from scratch. If any offending code is still
  here, please let me know. I've done my best, but I haven't used any
  version control 5 years ago.
- changed e-mail address.

Changes by Ramunas Lukosevicius <lukoramu@parok.lt>
- fixed source mapping bug,
- SIGHUP reloads map file.

0.10 (2003-06-12)

Changes by Wojtek Kaniewski <wojtekka@irc.pl>:
- major code cleanup,
- select() before accept(), so 6tunnel won't hang on sys_socketcall.
- fixed losing data under heavy load, when write() didn't send all
  data. unsent data is stored in a buffer,
- autoconf,
- supports pid file (idea by misio <monster@qm.pl>).

0.09 (2001-10-18)

Changes by Wojtek Kaniewski <wojtekka@irc.pl>:
- included patch from OpenBSD port by Patroklos Argyroudis <argp@bsd.gr>.
- fixing the fix - patch by awayzzz <awayzzz@digibel.org>.

0.08 (2001-10-13)

Changes by Dariusz Jackowski <ascent@linux.pl>:
- modified IPv4 to IPv6 mapping -- better memory managing.

Changes by Wojtek Kaniewski <wojtekka@irc.pl>:
- some memory leaks fixed thanks to Sorrow The Prince <s0tp@libero.it>.
- fixed dos condition thanks to awayzzz <awayzzz@digibel.org>.

0.07 (2000-11-19)

Changes by Tomasz Lipski <lemur@irc.pl>:
- added IPv4 to IPv6 mapping table for binding to different IPv6 addresses,
- fixed multiple connections handling for BSD,
- fixed manpage installation path.

Changes by Wojtek Kaniewski <wojtekka@irc.pl>:
- fixed some typos,
- connection limit (-L),
- changes installation prefix from /usr to /usr/local.

0.06 (2000-09-11)

Changes by Wojtek Kaniewski <wojtekka@irc.pl>:
- added -u, quick patch.

0.05 (2000-06-25)

Changes by Wojtek Kaniewski <wojtekka@irc.pl>:
- added shadowing of args which store -i or -I passwords,
- added changelog (huh, that was the most difficult part ;)),
- fixed Makefile to compile propertly on BSD with native IPv6 support
  (FreeBSD 4.0 for example).

0.04 (2000-02-24)
