@@ -14,6 +14,10 @@ Changes by Ramunas Lukosevicius <lukoramu@parok.lt>
 - fixed source mapping bug,
 - SIGHUP reloads map file.
 
+Changes by Roland Stigge <stigge@antcom.de>
+- fix an error in the "hints" handling of the host resolver which confused
+  local/source and remote hint (AF_INET/AF_INET6).
+
 0.10 (2003-06-12)
 
 Changes by Wojtek Kaniewski <wojtekka@irc.pl>:
